United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6838842 NUMA allocator: Segfault during startup on Linux
6838842 : NUMA allocator: Segfault during startup on Linux

Details
Type:
Bug
Submit Date:
2009-05-08
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
linux,generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs15,7
Fixed Versions:
hs15

Related Reports
Backport:
Backport:
Backport:
Backport:
Duplicate:

Sub Tasks

Description
The semantics of os::uncommit_memory() has changes with the fix for 6541756 (Reduce executable C-heap). This function is used in the NUMA-aware allocator to free pages. Instead, now it does an mmap(PROT_NONE), which causes the VM to trap on the next access.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/622212a69394
                                     
2009-05-09
SUGGESTED FIX

http://cr.openjdk.java.net/~iveresov/6838842/webrev.00
                                     
2009-05-08
EVALUATION

The semantics of os::free_memory() has changed with the fix for 6541756
(Reduce executable C-heap). This function is used in the NUMA-aware
allocator to free pages. Instead, now it does an mmap(PROT_NONE), which
causes the VM to trap on the next access. The fix is to change this
function to have its original semantics.
                                     
2009-05-08



Hardware and Software, Engineered to Work Together