6838842: NUMA allocator: Segfault during startup on Linux

Restored os::free_memory() semantics

Reviewed-by: apetrusenko